; ModuleID = '/home/carl/AnghaBench/radare2/libr/cons/extr_editor.c_saveline.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/cons/extr_editor.c_saveline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lines = common dso_local global i8* null, align 8
@bytes = common dso_local global i32 0, align 4
@_n = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @saveline to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @saveline(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %2
  br label %18

9:                                                ; preds = %2
  %10 = load i8*, i8** @lines, align 8
  %11 = load i32, i32* @bytes, align 4
  %12 = load i32, i32* @_n, align 4
  %13 = load i8*, i8** %4, align 8
  %14 = call i8* @r_str_word_get0set(i8* %10, i32 %11, i32 %12, i8* %13, i32* @bytes)
  store i8* %14, i8** %5, align 8
  %15 = load i8*, i8** @lines, align 8
  %16 = call i32 @free(i8* %15)
  %17 = load i8*, i8** %5, align 8
  store i8* %17, i8** @lines, align 8
  br label %18

18:                                               ; preds = %9, %8
  ret void
}

declare dso_local i8* @r_str_word_get0set(i8*, i32, i32, i8*, i32*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
